--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.3.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
 
     //tests
     testImplementation 'junit:junit:4.13.2'
