--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.3.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    //compose navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 
     //tests
     testImplementation 'junit:junit:4.13.2'
