--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,9 +59,12 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.3.1'
+
+    //compose
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
-    //compose navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.compose.material:material-icons-extended:1.3.1"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     //tests
     testImplementation 'junit:junit:4.13.2'
@@ -76,8 +79,6 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.44"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
@@ -88,7 +89,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //Room
+    // Room
     implementation "androidx.room:room-runtime:2.5.0"
-    annotationProcessor "androidx.room:room-compiler:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.0"
+    // Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.5.0"
 }
